# PuzzleSimulator

./: .gitignore  API_SPEC_EXTRACTOR.md  README.md  main.py  pyproject.toml  run_simulator.sh
docs/: API_SPEC_EXTRACTOR.md
experiments/image_processing/: poc_opencv_01.ipynb  poc_opencv_02.ipynb  pre_processing_real_image.ipynb
extractor/: __init__.py  extractor.py  piece.py
image_processing/: poc_opencv_01.ipynb
simulator/: main.py
simulator/ui/: frames.py  simulator.py
simulator/ui/frames/: content_frame.py  navigation_frame.py  top_frame.py
solver/Img/: filters.py
solver/Puzzle/: Distance.py  Edge.py  Extractor.py  Mover.py  Puzzle.py
